<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">File Manager</string>
    <string name="app_desc">File Manager is a tiny and easy using file manager tool for Android.</string>
    <string name="filemanager_name">File manager</string>
    <string name="setting">Settings</string>
    <string name="remove_ad">Remove Ads</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_mail_title">Feedback(%s)</string>
    <string name="more_apps">More apps</string>
    <string name="rating">Not bad,5 stars</string>
    <string name="sort">Sort</string>
    <string name="share">Share</string>
    <string name="share_subject">%s, a wonderful application to try</string>
    <string name="share_text" formatted="false">Tap %s to download it from Android Market. %s</string>
    <string name="about">About</string>
    <string name="loading_progress_text">Please wait while loading...</string>
    <string name="Processing_progress_text">Please wait while processing...</string>
    <string name="launch_app_fail">"Can't launch this app!"</string>
    <string name="switch_app_fail">"Can't switch to this app!"</string>
    <string name="no_item_checked">No item checked, select first please!</string>
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase it from Android Market.</string>
    <string name="buy_button">Buy app</string>
    <string name="buy_success">Purchase successful.Thank you for upgrading to premium!</string>
    <string name="buy_failed">Error purchasing:%s</string>
    <string name="home">Home</string>
    <string name="new_folder">New folder</string>
    <string name="refresh">Refresh</string>
    <string name="file_name">Name:</string>
    <string name="rename_file">Rename</string>
    <string name="multi_mode">Multi-selection</string>
    <string name="folder_create_success">Folder %s create successfully.</string>
    <string name="folder_create_existed">Folder %s existed.</string>
    <string name="file_existed">File %s exists.</string>
    <string name="folder_create_failed">Folder %s create failed.</string>
    <string name="file_is_sub_file" formatted="false">Target %s is sub folder of %s.</string>
    <string name="rename_success">%s rename successfully.</string>
    <string name="rename_failed">%s rename failed.</string>
    <string name="bookmark_success">Bookmark saved.</string>
    <string name="load_failed">File load failed:</string>
    <string name="delete_prompt">Are you sure to delete %s?</string>
    <string name="delete_multi_prompt">Are you sure to delete selected items?</string>
    <string name="overwrite_prompt">Are you sure to overwrite?</string>
    <string name="quit_prompt">Press back again to quit.</string>
    <string name="media_unmounted">SD card not ready, check please!</string>
    <string name="none_in_clipboard">Nothing in clipboard, copy/cut first please!</string>
    <string name="folder_status_locked">Locked</string>
    <string name="folder_items">items</string>
    <string name="selected_items">%d selected</string>
    <string name="cut_items">%d cut</string>
    <string name="copy_items">%d copied</string>
    <string name="copy">Copy</string>
    <string name="file_copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="paste">Paste</string>
    <string name="paste_into_folder">Paste into folder</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="unzip">Extract files</string>
    <string name="zip">Zip</string>
    <string name="properties">Properties</string>
    <string name="bookmark">Bookmark</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="no_bookmark">No bookmark</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="invert_selection">Invert selection</string>
</resources>
