<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_folder" android:id="@id/menu_new_folder" android:title="@string/new_folder" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_bookmark" android:id="@id/menu_bookmark" android:title="@string/bookmark" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_sort_by_size" android:id="@id/menu_sort" android:title="@string/sort" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_select_items" android:id="@id/menu_multi" android:title="@string/multi_mode" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_home" android:id="@id/menu_home" android:title="@string/home" android:showAsAction="ifRoom" />
    <item android:id="@id/menu_refresh" android:title="@string/refresh" android:showAsAction="ifRoom" />
    <item android:id="@id/menu_remove_ad" android:title="@string/remove_ad" />
    <item android:id="@id/menu_rate" android:title="@string/rating" />
    <item android:id="@id/menu_more_apps" android:title="@string/more_apps" />
    <item android:id="@id/menu_share" android:title="@string/share" />
    <item android:id="@id/menu_feedback" android:title="@string/feedback" />
    <item android:id="@id/menu_about" android:title="@string/about" />
</menu>