<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_copy" android:id="@id/act_copy" android:title="@string/copy" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_cut" android:id="@id/act_cut" android:title="@string/cut" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_delete" android:id="@id/act_delete" android:title="@string/delete" android:showAsAction="ifRoom" />
    <item android:id="@id/act_zip" android:title="@string/zip" />
    <item android:id="@id/act_select_all" android:title="@string/select_all" />
    <item android:id="@id/act_unselect_all" android:title="@string/unselect_all" />
    <item android:id="@id/act_invert_selection" android:title="@string/invert_selection" />
</menu>