<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/blue_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:gravity="center" android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.isnowstudio.common.widget.TitleBar android:id="@id/title_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <LinearLayout android:gravity="bottom" android:id="@id/multi_toolbar" android:background="@color/blue_title" android:paddingTop="4.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip">
            <Button android:id="@id/btn_copy" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/copy" android:layout_weight="1.0" />
            <Button android:id="@id/btn_cut" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/cut" android:layout_weight="1.0" />
            <Button android:id="@id/btn_delete" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/delete" android:layout_weight="1.0" />
            <Button android:id="@id/btn_zip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/zip" android:layout_weight="1.0" />
            <Button android:id="@id/btn_multiCancel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="?android:string/cancel" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:gravity="bottom" android:id="@id/paste_toolbar" android:background="@color/blue_title" android:paddingTop="4.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip">
            <Button android:id="@id/btn_paste" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/paste" android:layout_weight="1.0" />
            <Button android:id="@id/btn_pasteCancel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="cancel" android:layout_weight="1.0" />
        </LinearLayout>
    </FrameLayout>
    <RelativeLayout android:id="@id/list_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/ad_layout" android:layout_below="@id/toolbar" />
    <RelativeLayout android:id="@id/ad_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center" android:id="@id/adLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>