<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/app_name" android:layout_below="@id/icon" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0.9.1 build2012" android:layout_below="@id/name" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:autoLink="email" android:id="@id/mail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="mail:isnowstudio@gmail.com" android:layout_below="@id/version" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/copyright" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Copyright 2011 isnowstudio" android:layout_below="@id/mail" android:layout_centerHorizontal="true" />
    <Button android:textAppearance="?android:textAppearanceSmall" android:id="@id/rating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:minWidth="120.0dip" android:text="@string/rating" android:layout_below="@id/copyright" android:layout_centerHorizontal="true" />
    <Button android:textAppearance="?android:textAppearanceSmall" android:id="@id/more" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="120.0dip" android:text="@string/more_apps" android:layout_below="@id/rating" android:layout_centerHorizontal="true" />
</RelativeLayout>